--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@pulumi/doppler",
+    "name": "@pulumiverse/doppler",
     "version": "${VERSION}",
     "description": "A Pulumi package for creating and managing doppler cloud resources.",
     "keywords": [
@@ -23,6 +23,7 @@
         "typescript": "^4.3.5"
     },
     "pulumi": {
-        "resource": true
+        "resource": true,
+        "pluginDownloadURL": "github://api.github.com/pulumiverse"
     }
 }
