--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,7 +5,7 @@ before:
   hooks:
     - make tfgen
 builds:
-  - binary: provider-resource-doppler
+  - binary: pulumi-resource-doppler
     dir: provider
     env:
       - CGO_ENABLED=0
