--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -13,7 +13,7 @@
         "strict": true
     },
     "files": [
-        "config.ts",
+        "branchConfig.ts",
         "config/index.ts",
         "config/vars.ts",
         "environment.ts",
