Remove custom mappings in favor of auto mapping

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -17,6 +17,7 @@
         "config/index.ts",
         "config/vars.ts",
         "environment.ts",
+        "getSecrets.ts",
         "index.ts",
         "integration/awsParameterStore.ts",
         "integration/awsSecretsManager.ts",
@@ -24,7 +25,6 @@
         "project.ts",
         "provider.ts",
         "secret.ts",
-        "secrets.ts",
         "secretssync/awsParameterStore.ts",
         "secretssync/awsSecretsManager.ts",
         "secretssync/index.ts",
