Remap `project_member` resources

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -24,8 +24,9 @@
         "integration/awsSecretsManager.ts",
         "integration/index.ts",
         "project.ts",
-        "projectMemberGroup.ts",
-        "projectMemberServiceAccount.ts",
+        "projectmember/group.ts",
+        "projectmember/index.ts",
+        "projectmember/serviceAccount.ts",
         "provider.ts",
         "secret.ts",
         "secretssync/awsParameterStore.ts",
