make build_sdks

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -18,7 +18,9 @@
         "config/vars.ts",
         "environment.ts",
         "getSecrets.ts",
+        "getUser.ts",
         "group.ts",
+        "groupMember.ts",
         "index.ts",
         "integration/awsParameterStore.ts",
         "integration/awsSecretsManager.ts",
