--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,9 +44,9 @@ jobs:
       - uses: sigstore/cosign-installer@v3.1.2
       - uses: anchore/sbom-action/download-syft@v0.14.3
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5.0.0
+        uses: goreleaser/goreleaser-action@v6.0.0
         with:
-          args: -p 3 release --rm-dist
+          args: release --clean --timeout 60m0s
           version: latest
       - name: Create tag
         uses: actions/github-script@v6.4.1
