--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,4 @@
+version: 2
 archives:
   - id: archive
     name_template: "{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}"
@@ -20,8 +21,6 @@ builds:
       # The line below MUST align with the module in current provider/go.mod
       - -X github.com/pulumiverse/pulumi-doppler/provider/pkg/version.Version={{.Tag }}
     main: ./cmd/pulumi-resource-doppler/
-changelog:
-  skip: true
 release:
   disable: false
   prerelease: auto
