make build_sdks

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -21,9 +21,11 @@
         "getUser.ts",
         "group.ts",
         "groupMember.ts",
+        "groupMembers.ts",
         "index.ts",
         "integration/awsParameterStore.ts",
         "integration/awsSecretsManager.ts",
+        "integration/circleci.ts",
         "integration/flyio.ts",
         "integration/index.ts",
         "integration/terraformCloud.ts",
@@ -36,6 +38,7 @@
         "secret.ts",
         "secretssync/awsParameterStore.ts",
         "secretssync/awsSecretsManager.ts",
+        "secretssync/circleci.ts",
         "secretssync/flyio.ts",
         "secretssync/githubActions.ts",
         "secretssync/index.ts",
